force-app/main/default/objects/DE_Subsidiary__mdt/DE_Subsidiary__mdt.object-meta.xml
<CustomObject>
    <description>Maps DE Contracting Subsidiary picklist values to Odoo res.company internal IDs for IP-1 Customer Master payload. Also stores Odoo company configuration per contracting entity.</description>
    <label>DE Company</label>
    <pluralLabel>DE Companies</pluralLabel>
</CustomObject>