force-app/main/default/objects/DE_Subsidiary__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO 2-char country code for this DE contracting entity (e.g. HK, SG, KR).</description>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>