force-app/main/default/objects/DE_Subsidiary__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set FALSE to disable this subsidiary mapping without deleting the record.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>