force-app/main/default/objects/DE_Subsidiary__mdt/fields/Odoo_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Company_Id__c</fullName>
    <description>Odoo res.company internal integer ID for this DE contracting entity. Used in IP-1 Customer Master as company_id field.</description>
    <label>Odoo Company ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>