force-app/main/default/objects/DE_Subsidiary__mdt/fields/SF_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>SF_Picklist_Value__c</fullName>
    <description>Exact API value of the DE_Subsidiary__c picklist on Account (e.g. DE HK Ltd). Used as the match key when building IP-1 payload.</description>
    <label>SF Picklist Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>